--- a/dak/android/app/src/main/AndroidManifest.xml
+++ b/dak/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_application">
+    package="com.stech.dak">
    <application
         android:label="dak"
         android:icon="@mipmap/ic_launcher">
